Wobble issue
Pages were wobbling to the side and by hiding the scrollbar with overflow-x:hidden this was fixed

--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,6 @@
-
+body{
+    overflow-x: hidden;
+}
 /* About navbar styling*/
 .row.navbar{
     font-family: "Montserrat", sans-serif; 
